--- a/TestEnvironmentD3D9/TestEnvironmentD3D9.vcxproj.filters
+++ b/TestEnvironmentD3D9/TestEnvironmentD3D9.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="ui.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="structs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
